1. Метод .of [#457836]